@@ -8,7 +8,10 @@
         get_list.New methods are faster and simpler to unserstand.
     * Tests for new resolve methods.
     * Removed unused member Configvar.__resolving_in_progress, preventing circular resolves is done in ConfigVarList.
-
+    * InstallItem creates it's own var_list.
+    * InstallItem pushes it's own var_list to var_stack through 'with' statement.
+    * All action lists for an Installitem are taken from var_stack with variable.
+    
 28/5/2014 0.9.11   Shai Shasag <shai@waves.com>
     user visible changes, client:
     * Fixed a problem where index.yaml would not be copied to bookkeeping when syncing to DOK.
